Added basic CFG generation and automated debugger operation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"skipLibCheck": true,
 		"paths": {
-			"~/*": ["./src/*"]
+			"#r/*": ["./src/*"]
 		}
 	}
 }
