--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"source-map": "^0.7.4",
+		"template-file": "^6.0.1",
 		"ts-morph": "^23.0.0",
 		"vitest": "^1.6.0",
 		"ws": "^8.17.1"
