--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
+	"type": "module",
 	"dependencies": {
+		"@zip.js/zip.js": "^2.7.52",
+		"fastify": "^4.28.1",
 		"source-map": "^0.7.4",
 		"template-file": "^6.0.1",
 		"ts-morph": "^23.0.0",
-		"vitest": "^2.0.5",
+		"vitest": "^2.1.1",
 		"ws": "^8.18.0"
 	},
 	"devDependencies": {
-		"@types/node": "^22.5.1",
+		"@types/node": "^22.5.5",
 		"@types/ws": "^8.5.12",
-		"typescript": "^5.5.4"
+		"typescript": "^5.6.2"
 	},
 	"imports": {
 		"#r/*": "./dist/*.js"
