Implemented automatic execution of generated test cases.

--- a/src/config.ts.template
+++ b/src/config.ts.template
@@ -1,7 +1,8 @@
 const config = {
 	pathToZ3: "<Path to the Z3 executable.>",
 	serverPort: 4000,
-	projectPath: "<Path to the project.>"
+	concolicProjectPath: "<Path to the project.>",
+	testProjectPath: "<Path to the project.>"
 };
 
 export default config;
