--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"type": "module",
 	"dependencies": {
 		"@zip.js/zip.js": "^2.7.52",
-		"fastify": "^4.28.1",
+		"fastify": "^5.0.0",
+		"shescape": "^2.1.1",
 		"source-map": "^0.7.4",
 		"template-file": "^6.0.1",
 		"ts-morph": "^23.0.0",
@@ -12,6 +13,7 @@
 	"devDependencies": {
 		"@types/node": "^22.5.5",
 		"@types/ws": "^8.5.12",
+		"@vitest/coverage-v8": "^2.1.1",
 		"typescript": "^5.6.2"
 	},
 	"imports": {
