Added ability to test multiple functions across the project.

--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
 	"type": "module",
 	"dependencies": {
-		"@zip.js/zip.js": "^2.7.52",
-		"fastify": "^5.0.0",
+		"@fastify/static": "^8.0.2",
+		"@zip.js/zip.js": "^2.7.53",
+		"fastify": "^5.1.0",
 		"shescape": "^2.1.1",
 		"source-map": "^0.7.4",
 		"template-file": "^6.0.1",
-		"ts-morph": "^23.0.0",
-		"vitest": "^2.1.1",
+		"ts-morph": "^24.0.0",
+		"vitest": "^2.1.4",
 		"ws": "^8.18.0"
 	},
 	"devDependencies": {
-		"@types/node": "^22.5.5",
+		"@types/node": "^22.8.6",
 		"@types/ws": "^8.5.12",
-		"@vitest/coverage-v8": "^2.1.1",
+		"@vitest/coverage-v8": "^2.1.4",
 		"typescript": "^5.6.2"
 	},
 	"imports": {
