--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"type": "module",
 	"dependencies": {
+		"@fastify/multipart": "^9.0.1",
 		"@fastify/static": "^8.0.2",
+		"@fastify/websocket": "^11.0.1",
 		"@zip.js/zip.js": "^2.7.53",
 		"fastify": "^5.1.0",
 		"shescape": "^2.1.1",
@@ -12,10 +14,10 @@
 		"ws": "^8.18.0"
 	},
 	"devDependencies": {
-		"@types/node": "^22.8.6",
-		"@types/ws": "^8.5.12",
+		"@types/node": "^22.9.0",
+		"@types/ws": "^8.5.13",
 		"@vitest/coverage-v8": "^2.1.4",
-		"typescript": "^5.6.2"
+		"typescript": "^5.6.3"
 	},
 	"imports": {
 		"#r/*": "./dist/*.js"
