--- a/src/config.ts.template
+++ b/src/config.ts.template
@@ -1,6 +1,7 @@
 const config = {
 	pathToZ3: "<Path to the Z3 executable.>",
 	serverPort: 4000,
+	debuggerPort: 9339,
 	concolicProjectPath: "<Path to the project.>",
 	testProjectPath: "<Path to the project.>"
 };
