--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
 	"type": "module",
 	"dependencies": {
+		"@fastify/cors": "^10.0.1",
 		"@fastify/multipart": "^9.0.1",
 		"@fastify/static": "^8.0.3",
 		"@fastify/websocket": "^11.0.1",
-		"@zip.js/zip.js": "^2.7.53",
+		"@zip.js/zip.js": "^2.7.54",
 		"fastify": "^5.1.0",
 		"shescape": "^2.1.1",
 		"source-map": "^0.7.4",
 		"template-file": "^6.0.1",
 		"ts-morph": "^24.0.0",
-		"vitest": "^2.1.6",
+		"vitest": "^2.1.8",
 		"ws": "^8.18.0"
 	},
 	"devDependencies": {
-		"@types/node": "^22.10.0",
+		"@types/node": "^22.10.1",
 		"@types/ws": "^8.5.13",
-		"@vitest/coverage-v8": "^2.1.6",
+		"@vitest/coverage-v8": "^2.1.8",
 		"typescript": "^5.7.2"
 	},
 	"imports": {
